--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -115,7 +115,7 @@
     "@vitest/coverage-v8": "^4.0.8",
     "adm-zip": "^0.5.16",
     "chalk": "^5.4.1",
-    "eslint": "^9.16.0",
+    "eslint": "10.0.2",
     "jsdom": "^24.0.0",
     "playwright": "^1.52.0",
     "playwright-core": "^1.54.1",
