--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "22.13.1",
-    "eslint": "^9.7.0",
+    "eslint": "10.0.2",
     "eslint-plugin-security": "^3.0.1",
     "openai": "4.87.1",
     "postject": "1.0.0-alpha.6",
